<resources>
    <string name="app_name">TPaint</string>
    <string name="dessin_libre">Dessin libre</string>
    <string name="dessin_avec_modele">Dessin avec modele</string>
    <string name="charger_dessin">Charger</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>


</resources>
