<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.raph.tpaint.FreeDrawingActivity">



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFCCCCCC"
        android:orientation="vertical"
        tools:context=".FreeDrawingActivity" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <!-- New page button-->
            <ImageButton
                android:id="@+id/new_btn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:contentDescription="@string/start_new"
                android:src="@drawable/new_pic" />

            <!-- Selection brush style button-->
            <ImageButton
                android:id="@+id/draw_btn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:contentDescription="@string/brush"
                android:src="@drawable/brush" />

            <!-- Erase the content of the page-->
            <ImageButton
                android:id="@+id/erase_btn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:contentDescription="@string/erase"
                android:src="@drawable/eraser" />

            <!-- Save the drawing-->
            <ImageButton
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:contentDescription="@string/save"
                android:src="@drawable/save" />

        </LinearLayout>

        <!-- Instance of the class DrawinView-->
        <com.example.drawingfun.DrawingView
            android:id="@+id/drawing"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:background="#FFFFFFFF" />

        <!--Layout for the color palette-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical" >

            <!-- Top Row -->
            <LinearLayout
                android:id="@+id/paint_colors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
            </LinearLayout>
            <!-- Bottom Row -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>




